Handle expanded_ct, expanded_ct empty cases. 2. Fill up the empty list for data_frame lists. 3. Remove extraneous whitespaces.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -169,25 +169,35 @@
     "\n",
     "try:\n",
     "    bar_count = 0\n",
-    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \"+ quality_text\n",
+    "    all_data_frames = []\n",
+    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "    df_confirmed_tc = process_data_frame(expanded_ct, 'Mode_confirm', \"Labeled by user \\n (Based on Confirmed Trips)\")\n",
     "    df_sensed_tc = process_data_frame(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH \\n (Based on Total Trips)\")\n",
-    "    all_data_frames = [df_confirmed_tc,df_sensed_tc]\n",
-    "    \n",
+    "\n",
+    "    if not expanded_ct.empty:\n",
+    "        if not df_confirmed_tc.empty:\n",
+    "            bar_count += 1\n",
+    "            all_data_frames.append(df_confirmed_tc)\n",
+    "    else:\n",
+    "        print(\"expanded_ct is empty\")\n",
+    "\n",
     "    if not data_eb.empty:\n",
     "        df_replaced_tc = process_data_frame(data_eb, 'Replaced_mode', f\"Labeled by user for {mode_of_interest} \\n (Based on Replaced mode)\" )\n",
     "        all_data_frames.append(df_replaced_tc)\n",
     "        if not df_replaced_tc.empty:\n",
     "            bar_count += 1\n",
     "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text_specific\n",
-    "        \n",
+    "    else:\n",
+    "        print(\"data_eb is empty.\")\n",
+    "\n",
+    "    if not expanded_ct_sensed.empty:\n",
+    "        if not df_sensed_tc.empty:\n",
+    "            bar_count += 1\n",
+    "            all_data_frames.append(df_sensed_tc)\n",
+    "    else:\n",
+    "        print(\"expanded_ct_sensed is empty\")\n",
+    "\n",
     "    result_df = merge_dataframes(all_data_frames)\n",
-    "\n",
-    "    if not df_confirmed_tc.empty:\n",
-    "        bar_count += 1\n",
-    "    if not df_sensed_tc.empty:\n",
-    "        bar_count += 1\n",
-    "\n",
     "    stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)  \n",
     "except:\n",
@@ -211,18 +221,18 @@
    "outputs": [],
    "source": [
     "def process_data_for_cutoff(data_frame, distance_col, mode_col, quality_func, label_title):\n",
-    "    \n",
+    "\n",
     "    cutoff = data_frame.distance.quantile(0.8)\n",
     "    if pd.isna(cutoff):\n",
     "        cutoff = 0\n",
     "\n",
     "    dist_threshold = data_frame[distance_col].quantile(0.8).round(1)\n",
     "    dist_threshold = str(dist_threshold)\n",
-    "    \n",
+    "\n",
     "    labels = data_frame.loc[(data_frame['distance'] <= cutoff)][mode_col].value_counts(dropna=True).keys().tolist()\n",
     "    values = data_frame.loc[(data_frame['distance'] <= cutoff)][mode_col].value_counts(dropna=True).tolist()\n",
     "    processed_data = process_trip_data(labels, values, label_title)    \n",
-    "    \n",
+    "\n",
     "    return processed_data,cutoff, dist_threshold\n",
     "\n",
     "plot_title_no_quality= \"Number of trips for 80th percentile for each mode (selected by users):\"\n",
@@ -230,21 +240,30 @@
     "\n",
     "try:\n",
     "    bar_count = 0\n",
+    "    all_data_frames_u80 = []\n",
+    "    plot_title = plot_title_no_quality\n",
     "    df_confirmed_tc_u80,cutoff, dist_threshold  = process_data_for_cutoff(expanded_ct, distance_col, 'Mode_confirm', scaffolding.get_quality_text, \"Labeled by user \\n (Based on Confirmed Trips)\")\n",
     "    df_sensed_tc_u80, cutoff_sensed, dist_threshold_sensed = process_data_for_cutoff(expanded_ct_sensed, distance_col, 'primary_mode', scaffolding.get_quality_text_sensed, \"Sensed by OpenPATH \\n (Based on Total Trips)\")\n",
     "    u80_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"<= \" + dist_threshold + \" \" + short_label, include_test_users)\n",
     "    u80_quality_text_sensed = scaffolding.get_quality_text_sensed(expanded_ct_sensed[expanded_ct_sensed['distance'] <= cutoff_sensed], \"<= \" + dist_threshold_sensed + \" \" + short_label , include_test_users)\n",
-    "    all_data_frames_u80 = [df_confirmed_tc_u80, df_sensed_tc_u80]\n",
-    "    \n",
-    "    result_df_u80 = merge_dataframes(all_data_frames_u80)\n",
-    "    plot_title = plot_title_no_quality \n",
-    "    if not df_confirmed_tc_u80.empty:\n",
-    "        plot_title +=  \"\\n\" + \"For Sensed: \" + u80_quality_text\n",
-    "        bar_count += 1\n",
-    "    if not df_sensed_tc_u80.empty:\n",
-    "        plot_title +=  \"\\n\" + \"For Labeled: \" + u80_quality_text_sensed\n",
-    "        bar_count += 1\n",
     "\n",
+    "    if not expanded_ct.empty:\n",
+    "        if not df_confirmed_tc_u80.empty:\n",
+    "            plot_title +=  \"\\n\" + \"For Sensed: \" + u80_quality_text\n",
+    "            bar_count += 1\n",
+    "            all_data_frames_u80.append(df_confirmed_tc_u80)\n",
+    "    else:\n",
+    "        print(\"expanded_ct is empty.\")\n",
+    "\n",
+    "    if not expanded_ct_sensed.empty:\n",
+    "        if not df_sensed_tc_u80.empty:\n",
+    "            plot_title +=  \"\\n\" + \"For Labeled: \" + u80_quality_text_sensed\n",
+    "            bar_count += 1\n",
+    "            all_data_frames_u80.append(df_sensed_tc_u80)\n",
+    "    else:\n",
+    "        print(\"expanded_ct_sensed is empty.\")\n",
+    "\n",
+    "    result_df_u80 = merge_dataframes(all_data_frames_u80)\n",
     "    stacked_bar_chart_generic(plot_title, result_df_u80, file_name, bar_count)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df_u80[result_df_u80['Count'] > 0], file_name, plot_title)\n",
     "except:\n",
@@ -272,24 +291,24 @@
     "\n",
     "try:\n",
     "    bar_count = 0\n",
+    "    plot_title = plot_title_no_quality\n",
     "    if (len(dynamic_labels)):\n",
     "        purpose_map_label =  scaffolding.mapping_labels(dynamic_labels, \"PURPOSE\")\n",
     "        translation_work = purpose_map_label['work']\n",
     "        trip_purpose_query = f\"Trip_purpose == '{translation_work}'\"\n",
     "    else:\n",
     "        trip_purpose_query = \"Trip_purpose == 'Work'\"\n",
-    "    \n",
-    "    plot_title = plot_title_no_quality\n",
     "    commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct.query(trip_purpose_query), \"commute\", include_test_users)\n",
+    "\n",
     "    if not expanded_ct.empty:\n",
     "        bar_count += 1\n",
-    "        plot_title += \"\\n\" + commute_quality_text\n",
+    "        plot_title += \"\\n\" + \"For Labeled: \" + commute_quality_text\n",
     "\n",
     "    labels_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
     "    values_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).tolist()\n",
-    "    \n",
+    "\n",
     "    df_total_trip_commute = process_trip_data(labels_mc_commute, values_mc_commute, \"Labeled by user \\n (Based on Confirmed Trips)\")\n",
-    "    \n",
+    "\n",
     "    stacked_bar_chart_generic(plot_title, df_total_trip_commute, file_name, bar_count)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(df_total_trip_commute, file_name, plot_title)\n",
     "except:\n",
@@ -317,46 +336,56 @@
     "    dist.columns = ['Total (' + label_units_lower + ')', 'Count', 'Average (' + label_units_lower + ')']\n",
     "    dist = dist.reset_index()\n",
     "    dist = dist.sort_values(by=['Total (' + label_units_lower + ')'], ascending=False)\n",
-    "    \n",
+    "\n",
     "    dist_dict = dict(zip(dist[group_column], dist['Total (' + label_units_lower + ')']))\n",
     "    labels_dist = []\n",
     "    values_dist = []\n",
-    "    \n",
+    "\n",
     "    for x, y in dist_dict.items():\n",
     "        labels_dist.append(x)\n",
     "        values_dist.append(y)\n",
-    "    \n",
+    "\n",
     "    return process_trip_data(labels_dist, values_dist, quality_text)\n",
     "\n",
     "plot_title_no_quality = label_units + \" for each mode\"\n",
-    "file_name = 'distance_mode%s' % file_suffix\n",
+    "file_name = f\"distance_mode{file_suffix}\"\n",
     "\n",
     "try:\n",
     "    bar_count = 0\n",
-    "    df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', distance_col, label_units_lower, \"Labeled by user \\n Trip distance \\n (Based on Confirmed Trips)\")\n",
-    "    df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', distance_col, label_units_lower, \"Sensed by OpenPATH \\n Trip distance (Overall) \\n (Based on Total Trips)\")\n",
-    "    df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode', distance_col, label_units_lower, \"Sensed by OpenPATH \\n Trips distance (Land) \\n (Based on Total Trips)\")\n",
+    "    all_data_frames = []\n",
+    "    df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', distance_col, label_units_lower, \"Labeled by user \\n Trip distance\")\n",
+    "    df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', distance_col, label_units_lower, \"Sensed by OpenPATH \\n Trip distance (Overall)\")\n",
+    "    df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode', distance_col, label_units_lower, \"Sensed by OpenPATH \\n Trips distance (Land)\")\n",
     "\n",
-    "    all_data_frames = [df_confirm_dist, df_sensed_dist, df_sensed_dist_land]\n",
+    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "\n",
-    "    if not df_confirm_dist.empty:\n",
-    "        bar_count += 1\n",
-    "    if not df_sensed_dist.empty:\n",
-    "        bar_count += 1\n",
-    "    if not df_sensed_dist_land.empty:\n",
-    "        bar_count += 1\n",
-    "    \n",
-    "    plot_title = plot_title_no_quality + \"\\n\" + quality_text\n",
+    "    if not expanded_ct.empty:\n",
+    "        if not df_confirm_dist.empty:\n",
+    "            bar_count += 1\n",
+    "            all_data_frames.append(df_confirm_dist)\n",
+    "    else:\n",
+    "        print(\"expanded_ct is empty.\")\n",
     "\n",
     "    if not data_eb.empty:\n",
     "        df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', distance_col, label_units_lower, f\"Labeled by user for {mode_of_interest} \\n (Based on Replaced mode distance)\")\n",
-    "        all_data_frames.append(df_replaced_dist)\n",
     "        if not df_replaced_dist.empty:\n",
     "            bar_count += 1\n",
-    "            plot_title += \"\\n\" + f\"For {mode_of_interest}:\" + quality_text_specific\n",
+    "            all_data_frames.append(df_replaced_dist)\n",
+    "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text_specific\n",
+    "    else:\n",
+    "        print(\"data_eb is empty.\")\n",
+    "\n",
+    "    if not expanded_ct_sensed.empty:\n",
+    "        if not df_sensed_dist.empty:\n",
+    "            bar_count += 1\n",
+    "            all_data_frames.append(df_sensed_dist)\n",
+    "        if not df_sensed_dist_land.empty:\n",
+    "            bar_count += 1\n",
+    "            all_data_frames.append(df_sensed_dist_land)\n",
+    "    else:\n",
+    "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
     "    result_df = merge_dataframes(all_data_frames)\n",
-    "\n",
     "    stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
     "except:\n",
@@ -382,30 +411,37 @@
     "def process_trip_purpose_data(data_frame, purpose_column, label_text):\n",
     "    labels = data_frame[purpose_column].value_counts(dropna=True).keys().tolist()\n",
     "    values = data_frame[purpose_column].value_counts(dropna=True).tolist()\n",
-    "    \n",
     "    return process_trip_data(labels, values, label_text)\n",
     "\n",
     "plot_title_no_quality = \"Number of trips for each purpose (selected by users)\"\n",
-    "file_name = 'ntrips_purpose%s' %(file_suffix)\n",
+    "file_name = f\"ntrips_purpose{file_suffix}\"\n",
     "\n",
     "try:\n",
     "    bar_count = 0\n",
+    "    all_tp_data_frames = []\n",
     "    df_purpose_trip = process_trip_purpose_data(expanded_ct, 'Trip_purpose', \"Labeled by user \\n (Based on Confirmed Trips )\")\n",
     "    df_purpose_trip_eb = process_trip_purpose_data(data_eb, 'Trip_purpose', f\"Labeled by user for {mode_of_interest} \\n (Based on {mode_of_interest} related Purpose Trips)\")\n",
-    "    all_tp_data_frames = [df_purpose_trip, df_purpose_trip_eb]\n",
-    "    result_tp_df = merge_dataframes(all_tp_data_frames)\n",
     "\n",
     "    plot_title = plot_title_no_quality\n",
-    "    \n",
-    "    if not df_purpose_trip.empty:\n",
-    "        plot_title += \"\\n\" + quality_text\n",
-    "        bar_count += 1\n",
-    "    if not df_purpose_trip_eb.empty:\n",
-    "        plot_title += \"\\n\" + \"For {mode_of_interest}\" + quality_text_specific\n",
-    "        bar_count += 1\n",
     "\n",
+    "    if not expanded_ct.empty:\n",
+    "        if not df_purpose_trip.empty:\n",
+    "            plot_title += \"\\n\" + \"For Labeled: \" + quality_text\n",
+    "            bar_count += 1\n",
+    "            all_tp_data_frames.append(df_purpose_trip)\n",
+    "    else:\n",
+    "        print(\"expanded_ct is empty.\")\n",
+    "\n",
+    "    if not data_eb.empty:\n",
+    "        if not df_purpose_trip_eb.empty:\n",
+    "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text_specific\n",
+    "            bar_count += 1\n",
+    "            all_tp_data_frames.append(df_purpose_trip_eb)\n",
+    "    else:\n",
+    "        print(\"data_eb is empty.\")\n",
+    "\n",
+    "    result_tp_df = merge_dataframes(all_tp_data_frames)\n",
     "    stacked_bar_chart_generic(plot_title, result_tp_df, file_name, bar_count)\n",
-    "\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_tp_df[result_tp_df['Count'] > 0], file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
@@ -447,7 +483,7 @@
     "    x='Mode_confirm'\n",
     "    y='Average ('+label_units_lower+')'\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    \n",
+    "\n",
     "    data = dist.drop((dist.query(\"Count < 3\").index)).sort_values(by=['Average ('+label_units_lower+')'], ascending=False)\n",
     "\n",
     "    barplot_mode(data,x,y,plot_title, expanded_ct['Mode_confirm'].dropna().unique().tolist(), file_name)\n",
@@ -483,7 +519,7 @@
     "    data = fq_days\n",
     "    x = 'Day of the Month'\n",
     "    y = 'Number of Trips'\n",
-    "    \n",
+    "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "\n",
     "    barplot_day(data,x,y,plot_title,file_name)\n",
@@ -522,7 +558,7 @@
     "    y = 'Number of Trips'\n",
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    \n",
+    "\n",
     "    barplot_day(data,x,y,plot_title,file_name)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday']), file_name, plot_title)\n",
     "except:\n",
@@ -561,13 +597,13 @@
     "    dist.columns = ['Total ('+label_units_lower+')', 'Count', 'Average ('+label_units_lower+')']\n",
     "    dist = dist.reset_index()\n",
     "    dist =dist.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
-    "    \n",
+    "\n",
     "    data = dist.drop((dist.query(\"Count < 3\").index)).sort_values(by=['Average ('+label_units_lower+')'], ascending=False)\n",
     "    x='primary_mode'\n",
     "    y='Average ('+label_units_lower+')'\n",
-    "    \n",
+    "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    \n",
+    "\n",
     "    barplot_mode(data,x,y,plot_title, expanded_ct_sensed['primary_mode'].dropna().unique().tolist(), file_name)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average ('+label_units_lower+')'].values, data['primary_mode']), file_name, plot_title)\n",
     "except:\n",
@@ -601,7 +637,7 @@
     "    data = fq_days\n",
     "    x = 'Day of the Month'\n",
     "    y = 'Number of Trips'\n",
-    "    \n",
+    "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "\n",
     "    barplot_day(data,x,y,plot_title,file_name)\n",
@@ -640,7 +676,7 @@
     "    y = 'Number of Trips'\n",
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    \n",
+    "\n",
     "    barplot_day(data,x,y,plot_title,file_name)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday']), file_name, plot_title)\n",
     "except:\n",
@@ -680,7 +716,7 @@
     "    dg = dg.reset_index()\n",
     "    dg = dg.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
     "    data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average ('+label_units_lower+')'], ascending=False) \n",
-    "        \n",
+    "\n",
     "    x='Replaced_mode'\n",
     "    y='Average ('+label_units_lower+')'\n",
     "    y2 = \"Count\"\n",
