Corrected the heading for under 80th Stack Chart.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -249,7 +249,7 @@
     "\n",
     "    if not expanded_ct.empty:\n",
     "        if not df_confirmed_tc_u80.empty:\n",
-    "            plot_title +=  \"\\n\" + \"For Sensed: \" + u80_quality_text\n",
+    "            plot_title +=  \"\\n\" + \"For Labeled: \" + u80_quality_text\n",
     "            bar_count += 1\n",
     "            all_data_frames_u80.append(df_confirmed_tc_u80)\n",
     "    else:\n",
@@ -257,7 +257,7 @@
     "\n",
     "    if not expanded_ct_sensed.empty:\n",
     "        if not df_sensed_tc_u80.empty:\n",
-    "            plot_title +=  \"\\n\" + \"For Labeled: \" + u80_quality_text_sensed\n",
+    "            plot_title +=  \"\\n\" + \"For Sensed: \" + u80_quality_text_sensed\n",
     "            bar_count += 1\n",
     "            all_data_frames_u80.append(df_sensed_tc_u80)\n",
     "    else:\n",
