Update option value from distance_mode to total_trip_length, and updated the text description to Total Trip length ... from Distance.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -348,7 +348,7 @@
     "    return process_trip_data(labels_dist, values_dist, quality_text)\n",
     "\n",
     "plot_title_no_quality = label_units + \" for each mode\"\n",
-    "file_name = f\"distance_mode{file_suffix}\"\n",
+    "file_name = f\"total_trip_length{file_suffix}\"\n",
     "\n",
     "try:\n",
     "    bar_count = 0\n",
