Simplify process_data_frame() for Based on Number of Trips.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -331,8 +331,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_distance_data(data_frame, group_column, distance_column, label_units_lower, quality_text):\n",
-    "    dist = data_frame.groupby(group_column).agg({distance_column: ['sum', 'count', 'mean']})\n",
+    "def process_distance_data(data_frame, group_column, quality_text):\n",
+    "    dist = data_frame.groupby(group_column).agg({distance_col: ['sum', 'count', 'mean']})\n",
     "    dist.columns = ['Total (' + label_units_lower + ')', 'Count', 'Average (' + label_units_lower + ')']\n",
     "    dist = dist.reset_index()\n",
     "    dist = dist.sort_values(by=['Total (' + label_units_lower + ')'], ascending=False)\n",
@@ -353,9 +353,9 @@
     "try:\n",
     "    bar_count = 0\n",
     "    all_data_frames = []\n",
-    "    df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', distance_col, label_units_lower, \"Labeled by user \\n Trip distance\")\n",
-    "    df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', distance_col, label_units_lower, \"Sensed by OpenPATH \\n Trip distance (Overall)\")\n",
-    "    df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode', distance_col, label_units_lower, \"Sensed by OpenPATH \\n Trips distance (Land)\")\n",
+    "    df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', \"Labeled by user \\n Trip distance\")\n",
+    "    df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH \\n Trip distance (Overall)\")\n",
+    "    df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode', \"Sensed by OpenPATH \\n Trips distance (Land)\")\n",
     "\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "\n",
@@ -367,7 +367,7 @@
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
     "    if not data_eb.empty:\n",
-    "        df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', distance_col, label_units_lower, f\"Labeled by user for {mode_of_interest} \\n (Based on Replaced mode distance)\")\n",
+    "        df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', f\"Labeled by user for {mode_of_interest} \\n (Based on Replaced mode distance)\")\n",
     "        if not df_replaced_dist.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_replaced_dist)\n",
