Re-used process_data_frame() instead of process_trip_purpose_data().

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -408,19 +408,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_trip_purpose_data(data_frame, purpose_column, label_text):\n",
-    "    labels = data_frame[purpose_column].value_counts(dropna=True).keys().tolist()\n",
-    "    values = data_frame[purpose_column].value_counts(dropna=True).tolist()\n",
-    "    return process_trip_data(labels, values, label_text)\n",
-    "\n",
     "plot_title_no_quality = \"Number of trips for each purpose (selected by users)\"\n",
     "file_name = f\"ntrips_purpose{file_suffix}\"\n",
     "\n",
     "try:\n",
     "    bar_count = 0\n",
     "    all_tp_data_frames = []\n",
-    "    df_purpose_trip = process_trip_purpose_data(expanded_ct, 'Trip_purpose', \"Labeled by user \\n (Based on Confirmed Trips )\")\n",
-    "    df_purpose_trip_eb = process_trip_purpose_data(data_eb, 'Trip_purpose', f\"Labeled by user for {mode_of_interest} \\n (Based on {mode_of_interest} related Purpose Trips)\")\n",
+    "    df_purpose_trip = process_data_frame(expanded_ct, 'Trip_purpose', \"Labeled by user \\n (Based on Confirmed Trips )\")\n",
+    "    df_purpose_trip_eb = process_data_frame(data_eb, 'Trip_purpose', f\"Labeled by user for {mode_of_interest} \\n (Based on {mode_of_interest} related Purpose Trips)\")\n",
     "\n",
     "    plot_title = plot_title_no_quality\n",
     "\n",
