--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -159,10 +159,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_data_frame(data_frame, column_name, title):\n",
-    "    labels = data_frame[column_name].value_counts(dropna=True).keys().tolist()\n",
-    "    values = data_frame[column_name].value_counts(dropna=True).tolist()\n",
-    "    return process_trip_data(labels, values, title)\n",
+    "def process_data_frame(df, df_col, trip_type):\n",
+    "    labels = df[df_col].value_counts(dropna=True).keys().tolist()\n",
+    "    values = df[df_col].value_counts(dropna=True).tolist()\n",
+    "    return process_trip_data(labels, values, trip_type)\n",
     "\n",
     "plot_title_no_quality= \"Number of trips for each mode (selected by users)\"\n",
     "file_name = f'ntrips_total{file_suffix}'\n",
@@ -220,18 +220,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_data_for_cutoff(data_frame, mode_col, label_title):\n",
+    "def process_data_for_cutoff(df, df_col, trip_type):\n",
     "\n",
-    "    cutoff = data_frame.distance.quantile(0.8)\n",
+    "    cutoff = df.distance.quantile(0.8)\n",
     "    if pd.isna(cutoff):\n",
     "        cutoff = 0\n",
     "\n",
-    "    dist_threshold = data_frame[distance_col].quantile(0.8).round(1)\n",
+    "    dist_threshold = df[distance_col].quantile(0.8).round(1)\n",
     "    dist_threshold = str(dist_threshold)\n",
     "\n",
-    "    labels = data_frame.loc[(data_frame['distance'] <= cutoff)][mode_col].value_counts(dropna=True).keys().tolist()\n",
-    "    values = data_frame.loc[(data_frame['distance'] <= cutoff)][mode_col].value_counts(dropna=True).tolist()\n",
-    "    processed_data = process_trip_data(labels, values, label_title)    \n",
+    "    labels = df.loc[(df['distance'] <= cutoff)][df_col].value_counts(dropna=True).keys().tolist()\n",
+    "    values = df.loc[(df['distance'] <= cutoff)][df_col].value_counts(dropna=True).tolist()\n",
+    "    processed_data = process_trip_data(labels, values, trip_type)    \n",
     "\n",
     "    return processed_data,cutoff, dist_threshold\n",
     "\n",
@@ -331,13 +331,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_distance_data(data_frame, group_column, quality_text):\n",
-    "    dist = data_frame.groupby(group_column).agg({distance_col: ['sum', 'count', 'mean']})\n",
+    "def process_distance_data(df, df_col, trip_type):\n",
+    "    dist = df.groupby(df_col).agg({distance_col: ['sum', 'count', 'mean']})\n",
     "    dist.columns = ['Total (' + label_units_lower + ')', 'Count', 'Average (' + label_units_lower + ')']\n",
     "    dist = dist.reset_index()\n",
     "    dist = dist.sort_values(by=['Total (' + label_units_lower + ')'], ascending=False)\n",
     "\n",
-    "    dist_dict = dict(zip(dist[group_column], dist['Total (' + label_units_lower + ')']))\n",
+    "    dist_dict = dict(zip(dist[df_col], dist['Total (' + label_units_lower + ')']))\n",
     "    labels_dist = []\n",
     "    values_dist = []\n",
     "\n",
@@ -345,7 +345,7 @@
     "        labels_dist.append(x)\n",
     "        values_dist.append(y)\n",
     "\n",
-    "    return process_trip_data(labels_dist, values_dist, quality_text)\n",
+    "    return process_trip_data(labels_dist, values_dist, trip_type)\n",
     "\n",
     "plot_title_no_quality = label_units + \" for each mode\"\n",
     "file_name = f\"total_trip_length{file_suffix}\"\n",
