--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -347,7 +347,7 @@
     "\n",
     "    return process_trip_data(labels_dist, values_dist, trip_type)\n",
     "\n",
-    "plot_title_no_quality = \"Total trip length (\" + label_units + \") covered by each mode\"\n",
+    "plot_title_no_quality = \"Total trip length (\" + label_units_lower + \") covered by each mode\"\n",
     "file_name = f\"total_trip_length{file_suffix}\"\n",
     "\n",
     "try:\n",
