Shorten Stacked Bar Charts' Trip Type labels.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -171,8 +171,8 @@
     "    bar_count = 0\n",
     "    all_data_frames = []\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
-    "    df_confirmed_tc = process_data_frame(expanded_ct, 'Mode_confirm', \"Labeled by user \\n (Based on Confirmed Trips)\")\n",
-    "    df_sensed_tc = process_data_frame(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH \\n (Based on Total Trips)\")\n",
+    "    df_confirmed_tc = process_data_frame(expanded_ct, 'Mode_confirm', \"Labeled by user\\n (Confirmed trips)\")\n",
+    "    df_sensed_tc = process_data_frame(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH\\n (Total trips)\")\n",
     "\n",
     "    if not expanded_ct.empty:\n",
     "        if not df_confirmed_tc.empty:\n",
@@ -182,7 +182,7 @@
     "        print(\"expanded_ct is empty\")\n",
     "\n",
     "    if not data_eb.empty:\n",
-    "        df_replaced_tc = process_data_frame(data_eb, 'Replaced_mode', f\"Labeled by user for {mode_of_interest} \\n (Based on Replaced mode)\" )\n",
+    "        df_replaced_tc = process_data_frame(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\\n (Replaced mode)\" )\n",
     "        all_data_frames.append(df_replaced_tc)\n",
     "        if not df_replaced_tc.empty:\n",
     "            bar_count += 1\n",
@@ -242,8 +242,8 @@
     "    bar_count = 0\n",
     "    all_data_frames_u80 = []\n",
     "    plot_title = plot_title_no_quality\n",
-    "    df_confirmed_tc_u80,cutoff, dist_threshold  = process_data_for_cutoff(expanded_ct, 'Mode_confirm', \"Labeled by user \\n (Based on Confirmed Trips)\")\n",
-    "    df_sensed_tc_u80, cutoff_sensed, dist_threshold_sensed = process_data_for_cutoff(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH \\n (Based on Total Trips)\")\n",
+    "    df_confirmed_tc_u80,cutoff, dist_threshold  = process_data_for_cutoff(expanded_ct, 'Mode_confirm', \"Labeled by user\\n (Confirmed trips)\")\n",
+    "    df_sensed_tc_u80, cutoff_sensed, dist_threshold_sensed = process_data_for_cutoff(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH\\n (Total trips)\")\n",
     "    u80_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"<= \" + dist_threshold + \" \" + short_label, include_test_users)\n",
     "    u80_quality_text_sensed = scaffolding.get_quality_text_sensed(expanded_ct_sensed[expanded_ct_sensed['distance'] <= cutoff_sensed], \"<= \" + dist_threshold_sensed + \" \" + short_label , include_test_users)\n",
     "\n",
@@ -307,7 +307,7 @@
     "    labels_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
     "    values_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).tolist()\n",
     "\n",
-    "    df_total_trip_commute = process_trip_data(labels_mc_commute, values_mc_commute, \"Labeled by user \\n (Based on Confirmed Trips)\")\n",
+    "    df_total_trip_commute = process_trip_data(labels_mc_commute, values_mc_commute, \"Labeled by user\\n (Confirmed trips)\")\n",
     "\n",
     "    stacked_bar_chart_generic(plot_title, df_total_trip_commute, file_name, bar_count)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(df_total_trip_commute, file_name, plot_title)\n",
@@ -353,9 +353,9 @@
     "try:\n",
     "    bar_count = 0\n",
     "    all_data_frames = []\n",
-    "    df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', \"Labeled by user \\n Trip distance\")\n",
-    "    df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH \\n Trip distance (Overall)\")\n",
-    "    df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode', \"Sensed by OpenPATH \\n Trips distance (Land)\")\n",
+    "    df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', \"Labeled by user\\n (Trip distance)\")\n",
+    "    df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH\\n (Trip distance - Overall)\")\n",
+    "    df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode', \"Sensed by OpenPATH\\n (Trip distance - Land)\")\n",
     "\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "\n",
@@ -367,7 +367,7 @@
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
     "    if not data_eb.empty:\n",
-    "        df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', f\"Labeled by user for {mode_of_interest} \\n (Based on Replaced mode distance)\")\n",
+    "        df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
     "        if not df_replaced_dist.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_replaced_dist)\n",
@@ -414,8 +414,8 @@
     "try:\n",
     "    bar_count = 0\n",
     "    all_tp_data_frames = []\n",
-    "    df_purpose_trip = process_data_frame(expanded_ct, 'Trip_purpose', \"Labeled by user \\n (Based on Confirmed Trips )\")\n",
-    "    df_purpose_trip_eb = process_data_frame(data_eb, 'Trip_purpose', f\"Labeled by user for {mode_of_interest} \\n (Based on {mode_of_interest} related Purpose Trips)\")\n",
+    "    df_purpose_trip = process_data_frame(expanded_ct, 'Trip_purpose', \"Labeled by user\\n (Confirmed trips)\")\n",
+    "    df_purpose_trip_eb = process_data_frame(data_eb, 'Trip_purpose', f\"Labeled `{mode_of_interest}` by user\\n (Replaced trips)\")\n",
     "\n",
     "    plot_title = plot_title_no_quality\n",
     "\n",
