Update trip type param text for df_purpose_trip_eb.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -415,7 +415,7 @@
     "    bar_count = 0\n",
     "    all_tp_data_frames = []\n",
     "    df_purpose_trip = process_data_frame(expanded_ct, 'Trip_purpose', \"Labeled by user\\n (Confirmed trips)\")\n",
-    "    df_purpose_trip_eb = process_data_frame(data_eb, 'Trip_purpose', f\"Labeled `{mode_of_interest}` by user\\n (Replaced trips)\")\n",
+    "    df_purpose_trip_eb = process_data_frame(data_eb, 'Trip_purpose', f\"Labeled `{mode_of_interest}` by user\")\n",
     "\n",
     "    plot_title = plot_title_no_quality\n",
     "\n",
