--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -123,8 +123,8 @@
     "#output: two dictionaries to translate the ?s/ans\n",
     "#will run n surveys times\n",
     "def build_dictionaries(url_list):\n",
-    "    opt_dicts = {}\n",
-    "    quest_dicts = {}\n",
+    "    opt_dict = {}\n",
+    "    quest_dict = {}\n",
     "    \n",
     "    for url in sheet_list:\n",
     "        result = urllib.request.urlopen(url).read()\n",
@@ -157,7 +157,7 @@
     "#output: translated to readable list, with multiples handled\n",
     "#the for loop will run n times, where num_options <= n < all possible combinations of options\n",
     "#if people are selecting many different combinations, could be large\n",
-    "def traslate_options(labels):\n",
+    "def traslate_options(labels, opt_dict):\n",
     "    for i in range(len(labels)):\n",
     "        l_labels = labels[i].split(\" \")\n",
     "        for k in range(len(l_labels)):\n",
@@ -166,7 +166,17 @@
     "        sep = \"\\n\"\n",
     "        labels[i] = sep.join(l_labels)\n",
     "    \n",
-    "    return labels"
+    "    return labels\n",
+    "\n",
+    "#input: all of the responses to a single survey\n",
+    "#output: text with num responses and users\n",
+    "#THIS SHOULD GO IN SCAFFOLDING AND INCLUDE WHOLE POOL AT SOME POINT\n",
+    "def get_text(responses):\n",
+    "    num_resp = len(responses)\n",
+    "    num_users = responses.user_id.nunique()\n",
+    "    quality_text = f\"Based on {num_resp} responses from {num_users} users\"\n",
+    "    print(quality_text)\n",
+    "    return quality_text"
    ]
   },
   {
@@ -194,10 +204,20 @@
     "#load all of the confirmed trips\n",
     "tq = scaffolding.get_time_query(year, month)\n",
     "all_confirmed_trips = scaffolding.load_all_confirmed_trips(tq)\n",
-    "\n",
     "#remove blank inputs\n",
     "survey_trips = all_confirmed_trips[all_confirmed_trips['user_input'] != {}]\n",
-    "print(len(survey_trips))"
+    "print(len(survey_trips))\n",
+    "\n",
+    "#survey counts df\n",
+    "survey_trips = survey_trips.reset_index()\n",
+    "survey_trips['survey_name'] = survey_trips.user_input.apply(lambda sr: sr['trip_user_input']['data']['name'])\n",
+    "\n",
+    "#gather the cols needed for charts and text\n",
+    "survey_trips = survey_trips[['survey_name', 'user_id', 'user_input']]\n",
+    "survey_trips.head()\n",
+    "\n",
+    "#get quality text\n",
+    "qual_text = get_text(survey_trips)"
    ]
   },
   {
@@ -208,7 +228,7 @@
    "outputs": [],
    "source": [
     "#create translation dictionaries\n",
-    "opt_dicts, quest_dicts = build_dictionaries(sheet_list)\n",
+    "opt_dict, quest_dict = build_dictionaries(sheet_list)\n",
     "\n",
     "#format survey trips into responses dataframe\n",
     "df_responses = create_dataframe(survey_trips)\n",
@@ -227,13 +247,13 @@
    "outputs": [],
    "source": [
     "#create one plot per question\n",
-    "for col in df.columns:\n",
-    "    quest_frame = df.copy()\n",
+    "for col in df_responses.columns:\n",
+    "    quest_frame = df_responses.copy()\n",
     "    quest_frame = quest_frame[quest_frame[col] != \"\"] #could have blank responses for non-mandatory ?s\n",
-    "    labels = traslate_options(quest_frame[col].value_counts(dropna=True).keys().tolist())\n",
+    "    labels = traslate_options(quest_frame[col].value_counts(dropna=True).keys().tolist(), opt_dict)\n",
     "    values = quest_frame[col].value_counts(dropna=True).tolist()\n",
     "     \n",
-    "    pie_chart_purpose(col, labels, values, \"howdy\")"
+    "    pie_chart_purpose(col+'\\n'+qual_text, labels, values, \"howdy\")"
    ]
   },
   {
