only display questions currently in the survey
We only want to display question that are still in the survey, as those are the questions we will actually have a response for

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -244,14 +244,11 @@
     "    labels = quest_frame[col].value_counts(dropna=True).keys().tolist()\n",
     "#     labels = traslate_options(quest_frame[col].value_counts(dropna=True).keys().tolist(), opt_dict)\n",
     "    values = quest_frame[col].value_counts(dropna=True).tolist()\n",
-    "    \n",
-    "    try:\n",
-    "        label = quest_dict[col]\n",
-    "    except:\n",
-    "        label = col\n",
     "     \n",
     "    #if other is 0 don't display it :)\n",
-    "    pie_chart_purpose(label+'\\n'+qual_text, labels, values, filename)"
+    "    #will only show questions in the current survey (not older versions) and that have at least 1 response\n",
+    "    if col in quest_dict and len(quest_frame[col]) != 0:\n",
+    "        pie_chart_purpose(quest_dict[col]+'\\n'+qual_text, labels, values, filename)"
    ]
   }
  ],
